# sc2ts

./: .gitignore  LICENSE  README.md  get_lineage_data.sh  get_problematic_sites.sh  make_test_data.py  problematic_sites.txt  pyproject.toml  run.sh  setup.cfg  setup.py
.github/workflows/: ci.yml  docs.yml
docs/: Makefile  _config.yml  _toc.yml  alignments_analysis.md  api.md  arg_analysis.md  build.sh  cli.md  cli.rst  development.md  example_config.toml  inference.md  installation.md  intro.md  make_sc2ts_arg_subset.py  make_viridian_subset.py  sc2ts_viridian_v1.2_subset_1000.trees.tsz
notebooks/: Cophylo.ipynb  RecombinantAncestry.ipynb  lineage-graphs.ipynb  lineage-imputation.ipynb  qc-template.ipynb  test_ts.ipynb
sarscov2ts/: cli.py  convert.py  inference.py
sc2ts/: __init__.py  alignments.py  cli.py  constants.py  convert.py  core.py  data_import.py  dataset.py  debug.py  inference.py  info.py  jit.py  lineages.py  metadata.py  nextstrain.py  stats.py  tree_ops.py  utils.py  validation.py
sc2ts/data/: annotation.csv  lineages.json
tests/: conftest.py  sc2ts_fixtures.py  test_alignments.py  test_api.py  test_cli.py  test_convert.py  test_dataset.py  test_debug.py  test_extend.py  test_inference.py  test_info.py  test_jit.py  test_metadata.py  test_tree_hueristics.py  test_tree_ops.py  test_utils.py  util.py
tests/data/: 100-samplesx100-sites.metadata.tsv  100-samplesx100-sites.vcf  ba2_recomb.ts  coalesce_mutations_time_bug.trees  make_ba2_recomb.py  metadata.tsv  testrun-conf.toml  usher-metadata-date-test.tsv  v0.1_output_ex.ts.tsz
