[project]
name = "sc2ts"
description = "Infer ARGs for SARS-Cov2 in tskit format"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Jerome Kelleher", email = "jerome.kelleher@bdi.ox.ac.uk"},
]
requires-python = ">=3.9"
dependencies = [
  # "tsinfer==0.3.3", # https://github.com/jeromekelleher/sc2ts/issues/201
  # FIXME
  "tsinfer @ git+https://github.com/jeromekelleher/tsinfer.git@experimental-hmm",
  "tskit==1.0.0b1",
  "pyfaidx",
  "tszip",
  "pandas",
  "numba",
  "tqdm",
  "scipy",
  "click>=8.2",
  "tomli",
  "zarr<3",
  "humanize",
  "resource",
  "biotite",
]
dynamic = ["version"]

[project.scripts]
sc2ts = "sc2ts.cli:cli"

[project.optional-dependencies]
dev = [
  "msprime",
  "sgkit",
  "pytest",
  "pytest-coverage",
  "tomli-w",
]
analysis = [
  "matplotlib",
  "scikit-learn",
  "IPython",
  "networkx",
]

[build-system]
requires = [
    "setuptools>=42",
    "setuptools_scm",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sc2ts"]

[tool.setuptools_scm]
write_to = "sc2ts/_version.py"

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "--cov=sc2ts --cov-report term-missing"
