[project]
name = "sc2ts"
description = "Infer ARGs for SARS-Cov2 in tskit format"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Jerome Kelleher", email = "jerome.kelleher@bdi.ox.ac.uk"},
]
requires-python = ">=3.10"
dependencies = [
  "tskit==1.0.0b3",
  "tszip",
  "pandas",
  "tqdm",
  "zarr<3",
  "click>=8.2",
  # Not strictly needed for base functionality, but easier to include
  # as imported by the CLI
  "tomli",
  "humanize",
]
dynamic = ["version"]

[project.scripts]
sc2ts = "sc2ts.cli:cli"

[project.optional-dependencies]
dev = [
  "msprime",
  "sgkit",
  "pytest",
  "pytest-coverage",
  "tomli-w",
]
inference = [
  "scipy",
  "biotite",
  "tsinfer>=0.5",
  "pyfaidx",
  "numba",
]
debug = [
  "matplotlib",
  "IPython",
]

[build-system]
requires = [
    "setuptools>=42",
    "setuptools_scm",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sc2ts"]

[tool.setuptools_scm]
write_to = "sc2ts/_version.py"

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "--cov=sc2ts --cov-report term-missing"
