[metadata]
name = sc2ts
author = Jerome Kelleher
author_email = jerome.kelleher@bdi.ox.ac.uk
license = MIT
description = Infer a succinct tree sequence from SARS-CoV-2 sequence alignments

[options]
packages = sc2ts, sc2ts.data
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
python_requires = >=3.7
install_requires =
    tsinfer >= 0.3.0
    setuptools >= 41.2  # For pkg_resources
setup_requires =
    setuptools >= 41.2
    setuptools_scm
